external-crates/move/crates/move-compiler/tests/move_2024/matching/at_pattern_inner_invalid_type.exp
warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/at_pattern_inner_invalid_type.move:10:13
   │
10 │             x @ 0 => (),
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/at_pattern_inner_invalid_type.move:10:13
   │
 8 │     fun t0<T>(m: Maybe<T>) {
   │                  -------- Expected: '0x42::m::Maybe<T>'
 9 │         match (m) {
10 │             x @ 0 => (),
   │             ^^^^^
   │             │   │
   │             │   Given: integer
   │             Invalid pattern type. Pattern has type integer but subject has type '0x42::m::Maybe<T>'

error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/at_pattern_inner_invalid_type.move:17:13
   │
15 │     fun t1<T>(m: Maybe<T>) {
   │                  -------- Expected: '0x42::m::Maybe<T>'
16 │         match (m) {
17 │             _x @ 0 => (),
   │             ^^^^^^
   │             │    │
   │             │    Given: integer
   │             Invalid pattern type. Pattern has type integer but subject has type '0x42::m::Maybe<T>'

